# wechat

./: Dockerfile  db.sqlite3  pyproject.toml  requirement.txt
config/: asgi.py  settings.py  urls.py
my_app/: admin.py  consumers.py  forms.py  models.py  routing.py  serielizer.py  urls.py  views.py
my_app/migrations/: 0001_initial.py  0002_cart_cartitem_product_delete_person_cartitem_product.py  0003_chattext_remove_cartitem_cart_and_more.py  0004_chattext_time.py  0005_remove_chattext_reciver_chattext_receiver.py
my_app/static/css/: login.css  style.css
my_app/static/js/: main.js  ws.js
templates/: base.html  index.html  login.html
