[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Mehul <mehularjun4445@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
channels = "4.0.0"
daphne = "4.0.0"
Django = "4.2.2"
six = "1.16.0"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"